--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         </div>
         <div class="banner-section">
-            <img src="assets/Banner-1.jpg" alt="banner" />
+            <img src="Laptop/Banner-1.jpg" alt="banner" />
         </div>
         <div>
             <h2>New Products</h2>
