--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         <div class="category-section">
             <ul>
                 <li>
-                    <img src="assets/Categories/laptop.jpg" />
+                    <img src="assets/Arrival/laptop.jpg" />
                     <span>Laptop</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/camera.jpg" />
+                    <img src="assets/Arrival/camera.jpg" />
                     <span>Camera</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/Ac.jpg" />
+                    <img src="assets/Arrival/Ac.jpg" />
                     <span>AC</span>
                 </li>
                 <li>
