--- a/index.html
+++ b/index.html
@@ -37,43 +37,43 @@
         <div class="category-section">
             <ul>
                 <li>
-                    <img src="assets/Arrival/laptop.jpg" />
+                    <img src="Categories/laptop.jpg" />
                     <span>Laptop</span>
                 </li>
                 <li>
-                    <img src="assets/Arrival/camera.jpg" />
+                    <img src="Categories/camera.jpg" />
                     <span>Camera</span>
                 </li>
                 <li>
-                    <img src="assets/Arrival/Ac.jpg" />
+                    <img src="Categories/Ac.jpg" />
                     <span>AC</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/fridge.jpg" />
+                    <img src="Categories/fridge.jpg" />
                     <span>Fridge</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/ipods.jpg" />
+                    <img src="Categories/ipods.jpg" />
                     <span>Ipod</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/phone.png" />
+                    <img src="Categories/phone.png" />
                     <span>Phone</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/speakers.jpg" />
+                    <img src="Categories/speakers.jpg" />
                     <span>SPeakers</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/Tv.jpg" />
+                    <img src="Categories/Tv.jpg" />
                     <span>TV</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/watch.jpg" />
+                    <img src="Categories/watch.jpg" />
                     <span>Watch</span>
                 </li>
                 <li>
-                    <img src="assets/Categories/tabs.jpg" />
+                    <img src="Categories/tabs.jpg" />
                     <span>Tabs</span>
                 </li>
             </ul>
@@ -87,21 +87,21 @@
                 <ul>
                     <a href="Aircondition.html">
                         <li>
-                            <img src="assets/Arrival/arr-ac.jpg" alt="" />
+                            <img src="assets/Arrival/ac.jpg" alt="" />
                             <span>Samsung Split Ac 4 Star </span>
                         </li>
                     </a>
                     <a href="headphones.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-headP.png" alt="" />
+                            <img src="assets/Arrival/headP.png" alt="" />
                             <span>Boat Head Phones</span>
                         </li>
                     </a>
                     <a href="ipod.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-ipod.jpg" alt="" />
+                            <img src="assets/Arrival/ipod.jpg" alt="" />
                             <span>Apple IPods</span>
                         </li>
                     </a>
@@ -115,7 +115,7 @@
                     <a href="mobile.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-mobile.png" alt="" />
+                            <img src="assets/Arrival/mobile.png" alt="" />
                             <span>Samsung Mobiles </span>
                         </li>
                     </a>
@@ -129,28 +129,28 @@
                     <a href="tabs.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-tab.jpg" alt="" />
+                            <img src="assets/Arrival/tab.jpg" alt="" />
                             <span>Apple Tablets</span>
                         </li>
                     </a>
                     <a href="trimmer.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-trimmer.png" alt="" />
+                            <img src="assets/Arrival/trimmer.png" alt="" />
                             <span>Philips Trimmer</span>
                         </li>
                     </a>
                     <a href="tv.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-watch.jpg" alt="" />
+                            <img src="assets/Arrival/watch.jpg" alt="" />
                             <span>Apple Smart Watch</span>
                         </li>
                     </a>
                     <a href="laptop.html">
 
                         <li>
-                            <img src="assets/Arrival/arr-laptop.png" alt="" />
+                            <img src="assets/Arrival/laptop.png" alt="" />
                             <span>Dell Laptop</span>
                         </li>
                     </a>
@@ -159,22 +159,22 @@
             </div>
         </div>
         <div class="banner-2">
-            <img src="assets/Banner-2.jpg" alt="">
+            <img src="Laptop/Banner-2.jpg" alt="">
         </div>
         <div class="discount-section">
-            <img src="assets/Discount/disc-1.jpg" alt="">
-            <img src="assets/Discount/disc-2.jpg" alt="">
-            <img src="assets/Discount/disc-3.jpg" alt="">
-            <img src="assets/Discount/disc-4.jpg" alt="">
-            <img src="assets/Discount/disc-5.jpg" alt="">
-            <img src="assets/Discount/disc-6.jpg" alt="">
-            <img src="assets/Discount/disc-7.jpg" alt="">
-            <img src="assets/Discount/disc-8.jpg" alt="">
-            <img src="assets/Discount/disc-9.jpg" alt="">
-            <img src="assets/Discount/disc-10.jpg" alt="">
+            <img src="Discount/disc-1.jpg" alt="">
+            <img src="Discount/disc-2.jpg" alt="">
+            <img src="Discount/disc-3.jpg" alt="">
+            <img src="Discount/disc-4.jpg" alt="">
+            <img src="Discount/disc-5.jpg" alt="">
+            <img src="Discount/disc-6.jpg" alt="">
+            <img src="Discount/disc-7.jpg" alt="">
+            <img src="Discount/disc-8.jpg" alt="">
+            <img src="Discount/disc-9.jpg" alt="">
+            <img src="Discount/disc-10.jpg" alt="">
         </div>
         <div class="footer">
-            <img src="assets/footer.png" alt="">
+            <img src="Laptop/footer.png" alt="">
         </div>
     </div>
 
